k8s/vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pettrip-vue-deployment
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pettrip-vue
  template:
    metadata:
      name: pettrip-vue-pod
      labels:
        app: pettrip-vue
    spec:
      containers:
        - name: vue
          image: sha256:0462b980caf04e4b1b1b65ef236740c4d8a3aec3808ac1f851c519dbb0fec438
          ports:
          - containerPort: 5173
---

apiVersion: v1
kind: Service
metadata:
  name: pettrip-vue-clusterip
  namespace: production
spec:
  ports:
    - name: web-port
      port: 5173
      targetPort: 5173
  selector:
    app: webserver
  type: ClusterIP
