k8s/vue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pettrip-front
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ssafy.pettrip.com
    http:
      paths:
      - path: /pet
        pathType: Prefix
        backend:
          service:
            name: pettrip-vue-clusterip
            port:
              number: 80
